--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
   <section class="header">
     <img src="./images/header-logo.svg" alt="Россия" class="header__logo">
     <div class="header__links">
-      <a href="" class="header__link">Ru</a>
-      <a href="" class="header__link">En</a>
+      <a href="#" class="header__link">Ru</a>
+      <a href="#" class="header__link">En</a>
     </div>
   </section>
 
   <section class="lead">
-    
+    <h1 class="lead__title">Путешествия по России</h1>
+    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <img src="./images/lead-polka.jpg" alt="Полка" class="lead__image">
+    <p class="lead__caption">ваша полка — верхняя</p>
   </section>
 </body>
 
