--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
       <p class="intro__list-element">Аэропортов 241</p>
     </div>
   </section>
+
+  <section class="photo-grid">
+    <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
+    <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Гора" class="photo-grid__item">
+    <img src="./images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
+    <img src="./images/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__item">
+    <img src="./images/photo-grid-arisa.jpg" alt="Колесо" class="photo-grid__item">
+    <img src="./images/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item">
+    <img src="./images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
+    <img src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак" class="photo-grid__item">
+    <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка" class="photo-grid__item">
+    <img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка" class="photo-grid__item">
+    <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item">
+    <img src="./images/photo-grid-ergaki.jpg" alt="Туман" class="photo-grid__item">
+  </section>
 </body>
 
 </html>
