--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
         от столицы до Байкала на электричках.</p>
     </a>
   </section>
+
+  <section class="footer">
+    <nav class="footer__links">
+      <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+      <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+      <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+      <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+      <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+    </nav>
+    <div class="footer__copyright">&copy; 2022, Полина Андреянова</div>
+  </section>
 </body>
 
 </html>
